<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Fragments.HomeFragment"
android:background="@color/white"
android:layout_marginBottom="25dp">


<TextView
    android:id="@+id/title_txt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/yellow"
    android:fontFamily="@font/cherry_cream_soda"
    android:gravity="center"
    android:padding="10dp"
    android:text="@string/Recipes"
    android:textColor="@color/black"
    android:textSize="40sp"
    android:textStyle="bold"
    tools:ignore="TextContrastCheck" />


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll"
    android:scrollbars="none"
    android:layout_below="@+id/title_txt"
    android:layout_marginBottom="20dp"
    tools:ignore="UselessParent"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/gray"
        android:foregroundGravity="center"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_card"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:background="@color/gray">

            <SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bg"

                />
        </androidx.cardview.widget.CardView>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recipe_line1"
            android:layout_below = "@+id/search_card"
            android:orientation="horizontal"
            tools:ignore="ObsoleteLayoutParam">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/card_recipe1"
                app:cardCornerRadius="15dp"
                android:background="@drawable/card_bg"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                app:cardBackgroundColor="@color/jetBlack"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recipe1_img"
                    android:gravity="top"
                    android:minHeight="10dp"
                    android:src="@drawable/image_1"
                    android:contentDescription="recipe1_image"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recipe1_img"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/bubblegum_sans"
                    android:foregroundGravity="center"
                    android:minHeight="48dp"
                    android:text="@string/Recipe1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat,TextContrastCheck" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_recipe2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="15dp"
                android:foregroundGravity="right"
                app:cardBackgroundColor="@color/jetBlack"
                android:background="@drawable/card_bg"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/recipe2_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:src="@drawable/image_2"
                    android:contentDescription="recipe2_image"
                    android:minHeight="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recipe2_img"
                    android:layout_gravity="bottom"
                    android:background="@color/black"
                    android:fontFamily="@font/bubblegum_sans"
                    android:foregroundGravity="center"
                    android:minHeight="48dp"
                    android:text="@string/Recipe2"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recipe_line2"
            android:layout_below = "@+id/recipe_line1"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            tools:ignore="ObsoleteLayoutParam">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/card_recipe3"
                app:cardBackgroundColor="@color/jetBlack"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/card_bg"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recipe3_img"
                    android:layout_gravity="top"
                    android:minHeight="10dp"
                    android:src="@drawable/image_3"
                    android:contentDescription="recipe3_image"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recipe3_img"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/bubblegum_sans"
                    android:foregroundGravity="center"
                    android:background="@color/black"
                    android:minHeight="48dp"
                    android:text="@string/Recipe3"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/card_recipe4"
                app:cardBackgroundColor="@color/jetBlack"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="200dp"
                android:background="@drawable/card_bg"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recipe4_img"
                    android:layout_gravity="top"
                    android:minHeight="10dp"
                    android:src="@drawable/image_4"
                    android:contentDescription="recipe4_image"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recipe4_img"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/bubblegum_sans"
                    android:foregroundGravity="center"
                    android:background="@color/black"
                    android:minHeight="48dp"
                    android:text="@string/Recipe4"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recipe_line3"
            android:layout_below = "@+id/recipe_line2"
            android:orientation="horizontal"
            tools:ignore="ObsoleteLayoutParam">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/card_recipe5"
                app:cardBackgroundColor="@color/jetBlack"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/card_bg"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recipe5_img"
                    android:layout_gravity="top"
                    android:minHeight="10dp"
                    android:src="@drawable/image_5"
                    android:contentDescription="recipe5_image"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recipe5_img"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/bubblegum_sans"
                    android:foregroundGravity="center"
                    android:background="@color/black"
                    android:minHeight="48dp"
                    android:text="@string/Recipe5"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/card_recipe6"
                app:cardBackgroundColor="@color/jetBlack"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="200dp"
                android:background="@drawable/card_bg"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recipe6_img"
                    android:layout_gravity="top"
                    android:minHeight="10dp"
                    android:src="@drawable/image_10"
                    android:contentDescription="recipe6_image"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_below="@+id/recipe6_img"
                    android:layout_gravity="bottom"
                    android:background="@color/black"
                    android:fontFamily="@font/bubblegum_sans"
                    android:foregroundGravity="center"
                    android:minHeight="48dp"
                    android:text="@string/Recipe6"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recipe_line4"
            android:layout_below = "@+id/recipe_line3"
            android:orientation="horizontal"
            tools:ignore="ObsoleteLayoutParam"
            android:layout_marginBottom="54dp">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/card_recipe7"
                app:cardBackgroundColor="@color/jetBlack"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/card_bg"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recipe7_img"
                    android:layout_gravity="top"
                    android:minHeight="10dp"
                    android:src="@drawable/image_7"
                    android:contentDescription="recipe7_image"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recipe7_img"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/bubblegum_sans"
                    android:foregroundGravity="center"
                    android:background="@color/black"
                    android:minHeight="48dp"
                    android:text="@string/Recipe7"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginBottom="9dp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/card_recipe8"
                app:cardBackgroundColor="@color/jetBlack"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="200dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/card_bg"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recipe8_img"
                    android:layout_gravity="top"
                    android:minHeight="0dp"
                    android:src="@drawable/image_8"
                    android:contentDescription="recipe8_image"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recipe8_img"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/bubblegum_sans"
                    android:foregroundGravity="center"
                    android:background="@color/black"
                    android:minHeight="48dp"
                    android:layout_marginBottom="9dp"
                    android:text="@string/Recipe8"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>


</RelativeLayout>